Fix tooltip formatting. Fix x axis clipping

--- a/org.idempiere.zk.billboard/src/web/js/zul/billboard/css/billboard.css
+++ b/org.idempiere.zk.billboard/src/web/js/zul/billboard/css/billboard.css
@@ -144,27 +144,27 @@
   opacity: 0.9;
   -webkit-box-shadow: 7px 7px 12px -9px #777777;
   -moz-box-shadow: 7px 7px 12px -9px #777777;
-  box-shadow: 7px 7px 12px -9px #777777; }
+  box-shadow: 7px 7px 12px -9px #777777 !important; }
   .bb-tooltip tr {
-    border: 1px solid #CCC; }
+    border: 1px solid #CCC !important; }
   .bb-tooltip th {
     background-color: #aaa;
     font-size: 14px;
-    padding: 2px 5px;
-    text-align: left;
+    padding: 2px 5px !important;
+    text-align: left !important;
     color: #FFF; }
   .bb-tooltip td {
     font-size: 13px;
-    padding: 3px 6px;
+    padding: 3px 6px !important;
     background-color: #fff;
-    border-left: 1px dotted #999; }
+    border-left: 1px dotted #999 !important; }
     .bb-tooltip td > span, .bb-tooltip td > svg {
       display: inline-block;
       width: 10px;
       height: 10px;
-      margin-right: 6px; }
+      margin-right: 6px !important; }
   .bb-tooltip.value {
-    text-align: right; }
+    text-align: right !important; }
 
 /*-- Area --*/
 .bb-area {
